# qcm

./: .pre-commit-config.yaml  LICENSE  README.md  USAGE_BDD.md  pyproject.toml
.github/workflows/: ci_cd.yaml
docs/: sauvegarde.md  utilisation.md
examples/: test.qdb
scripts/: init_bdd.py
src/: main.py
src/control/: __init__.py  appstate.py  bdd_manager.py  controller.py
src/model/: qcm.py  question.py  reponse.py
src/qcm/: __main__.py
src/qcm/control/: appstate.py  bdd_manager.py  controller.py  db_manager.py
src/qcm/control/db/: db2model.py  model2db.py
src/qcm/db/: base.py  qcm.py  question.py  reponse.py  tentative.py
src/qcm/model/: data.py  qcm.py  question.py  questionnaire.py  reponse.py  tentative.py
src/qcm/utils/: logs.py
src/qcm/vue/: menubar.py  parent.py
src/qcm/vue/editeur/: choix_multiple.py  choix_unique.py  editeur.py  editeur_page.py
src/qcm/vue/question/: callback_type.py  mainview.py
src/qcm/vue/reponse/: __init__.py  mainview.py
src/qcm/vue/splashscreen/: mainview.py
src/qcm/vue/verifier/: mainview.py
src/scripts/: init_bdd.py
src/vue/: __init__.py  menubar.py
src/vue/editeur/: choix_multiple.py  choix_unique.py  editeur.py  editeur_callback_type.py  editeur_page.py
src/vue/question/: callback_type.py  mainview.py
src/vue/question/ui/: __init__.py  libre.py  multiples.py  ui.py  (+1 more)
src/vue/reponse/: choix_libre.py  choix_multiple.py  choix_unique.py  mainview.py  reponse_page.py  reponse_ui.py
src/vue/splashscreen/: mainview.py
test/: test_bdd.py  test_model.py
tests/: test_bdd.py  test_model.py
(+19 files in other folders)
