[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qcm_projet"
version = "0.0.1"
description = "Projet QCM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy",
    "ttkbootstrap",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "pre-commit",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "N", "I"]

[tool.ruff.lint.isort]
known-first-party = ["qcm", "model", "control", "vue"]

[tool.setuptools.packages.find]
where = ["src"]
